fixed unaligned content

--- a/pages/css/experience.css
+++ b/pages/css/experience.css
@@ -29,7 +29,7 @@
 }
 .experience__page #faqs{
     background: #F7F7F7;
-    padding: 70px 0 50px 70px;
+    padding: 70px 50px;
 }
 .experience__page .faqs__wrapper{
     margin-top: 50px;
